--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.55.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.11.1",
     "tailwindcss": "^3.4.17"
   },
